ch-check-nested-ul#

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                             <li> <a href="http://www.galbern.com"> Exercise 3 </a> </li>
                         </ul>
             <!-- </li> -->
-            
+            <!-- to check the right position after deployment -->
     
             <li> Lesson 3 </li>
 
