--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en"> <head>
     <meta charset="utf-8" />
-    <title></title> </head>
+    <title>WAP</title> </head>
     <body>
-        <img src ="images/smith.jpg" alt = "Smith Tukahirwa" width = 200 height = 170/>
+        <img src ="images/smith.jpg" alt = "Smith Tukahirwa" width = 200 height = 170 />
         <h1> Smith Tukahirwa</h1>
         <ul>
-            <li> Lesson 1 </li>
+            <li> Lesson 1 
                         <ul>
                             <li> <a href="http://www.galbern.com"> Exercise 1 </a> </li>
                             <li> <a href="http://www.galbern.com"> Exercise 2 </a> </li>
                             <li> <a href="http://www.galbern.com"> Exercise 3 </a> </li>
                         </ul>
-            <!-- </li> -->
+            </li>
             <!-- to check the right position after deployment -->
     
             <li> Lesson 3 </li>
