--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
     <meta charset="utf-8" />
     <title>WAP</title> </head>
     <body>
-        <img src ="images/smith.jpg" alt = "Smith Tukahirwa" width = 200 height = 170 />
+        <img src ="images/Smith.jpg" alt = "author - Smith" width = 200 height = 170 />
         <h1> Smith Tukahirwa</h1>
         <ul>
             <li> Lesson 1 
                         <ul>
-                            <li> <a href="http://www.galbern.com"> Exercise 1 </a> </li>
-                            <li> <a href="http://www.galbern.com"> Exercise 2 </a> </li>
-                            <li> <a href="http://www.galbern.com"> Exercise 3 </a> </li>
+                            <li> <a href="hhttps://smithtuka.github.io/wap/"> Exercise 1 </a> </li>
+                            <li> <a href="hhttps://smithtuka.github.io/wap/"> Exercise 2 </a> </li>
+                            <li> <a href="hhttps://smithtuka.github.io/wap/"> Exercise 3 </a> </li>
                         </ul>
             </li>
-            <!-- to check the right position after deployment -->
     
             <li> Lesson 3 </li>
 
@@ -26,7 +25,7 @@
             <img src="images/html5_validator.png" alt="Validate" /> 
             </a>
         </p>
-     
+     <footer> &copy;smithtuka 2020 </footer>
     </body>
 
 </html>
