--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <title>WAP</title> </head>
     <body>
-        <img src ="images/Smith.jpg" alt = "author - Smith" width = 200 height = 170 />
+        <img src ="images/html5_validator.png" alt = "author - Smith" width = 200 height = 170 />
         <h1> Smith Tukahirwa</h1>
         <ul>
             <li> Lesson 1 
