--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <ul>
             <li> Lesson 1 
                         <ul>
-                            <li> <a href="https://smithtuka.github.io/wap/"> Exercise 1 </a> </li>
+                            <li> <a href="https://smithtuka.github.io/wap/ass2/aboutme.html"> About Me </a> </li>
                             <li> <a href="https://smithtuka.github.io/wap/"> Exercise 2 </a> </li>
                             <li> <a href="https://smithtuka.github.io/wap/"> Exercise 3 </a> </li>
                         </ul>
