--- a/ass2/aboutme.html
+++ b/ass2/aboutme.html
@@ -2,7 +2,7 @@
 <html lang="en"> <head>
     <meta charset="utf-8" />
     <title>About Me</title> </head>
-    <link href="resources/css/styleme.css" type ="text/css" rel ="stylesheet">
+    <link href="resources/css/styleme.css" type ="text/css" rel ="stylesheet" />
 
     <body>
         <div class = "container">
