--- a/ass2/aboutme.html
+++ b/ass2/aboutme.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en"> <head>
+<html lang="en"> 
+    <head></head>
     <meta charset="utf-8" />
-    <title>About Me</title> </head>
+    <title>About Me</title> 
     <link href="resources/css/styleme.css" type ="text/css" rel ="stylesheet" />
-
+    </head>
     <body>
         <div class = "container">
     <h1> About Smith Tukahirwa</h1>
