ch-dt dd cleanup

--- a/ass2/aboutme.html
+++ b/ass2/aboutme.html
@@ -30,10 +30,10 @@
         <ol>
             <li> &quot;God Bless the Broken Road&quot; (<a href="https://www.imdb.com/title/tt5702446/">IMDB</a>) 
                 <dl>
-                    <dt> Director <dd> Harold Cronk</dd></dt>
-                    <dt> Genre <dd> Drama/Family/Romance</dd></dt>
-                    <dt> Writers <dd>Harold Cronk, Jennifer Dornbush <a href="https://www.imdb.com/title/tt5702446/fullcredits?ref_=tt_ov_wr#writers/">more..</a> </dd></dt>
-                    <dt> Stars <dd>Matthew Derek Davis, Arthur Cartwright, Adam Agee <a href="https://www.imdb.com/title/tt5702446/fullcredits/?ref_=tt_ov_st_sm">more..</a> </dd></dt>
+                    <dt> Director </dt> <dd> Harold Cronk</dd>
+                    <dt> Genre </dt><dd> Drama/Family/Romance</dd>
+                    <dt> Writers</dt> <dd>Harold Cronk, Jennifer Dornbush <a href="https://www.imdb.com/title/tt5702446/fullcredits?ref_=tt_ov_wr#writers/">more..</a> </dd>
+                    <dt> Stars</dt> <dd>Matthew Derek Davis, Arthur Cartwright, Adam Agee <a href="https://www.imdb.com/title/tt5702446/fullcredits/?ref_=tt_ov_st_sm">more..</a> </dd>
                     
                 </dl>
             </li>
