--- a/ass2/pie.html
+++ b/ass2/pie.html
@@ -10,6 +10,8 @@
     <!-- Extra features 1, 2 and 4-->
 
   </head>
+  <body>
+      <div class = "container">
   <header id="main-header">
     <h1>Grandma's Lemon Meringue Pie</h1>
 </header>
@@ -103,7 +105,6 @@
 <p><a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a><br>
 <a href="../index.html">Home</a></p>
 
-<div class = "footer">
     <a  href="https://jigsaw.w3.org/css-validator/check/referer">
         <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="valid css!">
     </a>
@@ -116,8 +117,6 @@
        A Granny's Pies Production <span >|</span>
        All rights reserved       <span >|</span>
         </pre>
-</div>
-  <body>
-		
+</div>		
   </body>
 </html>
