--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <li> Lesson 1 
                         <ul>
                             <li> <a href="https://smithtuka.github.io/wap/ass2/aboutme.html"> About Me </a> </li>
-                            <li> <a href="https://smithtuka.github.io/wap/ass2/pie.html">  </a> </li>
+                            <li> <a href="https://smithtuka.github.io/wap/ass2/pie.html"> The Pie </a> </li>
                             <li> <a href="https://smithtuka.github.io/wap/"> Exercise 3 </a> </li>
                         </ul>
             </li>
