--- a/ass2/pie.html
+++ b/ass2/pie.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>The Pies</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" type="text/css" href="../recipe.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link rel="stylesheet" type="text/css" href="../recipe.css" />
     <link rel="icon" href="https://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif"/>
     <!-- Extra features 1, 2 and 4-->
 
