--- a/ass2/pie.html
+++ b/ass2/pie.html
@@ -103,18 +103,17 @@
 <p><a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a><br>
 <a href="../index.html">Home</a></p>
 
-    <a  href="https://jigsaw.w3.org/css-validator/check/referer">
-        <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="valid css!">
-    </a>
-
-    <a  href="https://validator.w3.org/check?uri=referer">
-        <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="valid HTML!!">
-    </a>
+   
 <pre >
-    Copyright &copy; 2012 Granny's Pies <span >|</span>
-       A Granny's Pies Production <span >|</span>
-       All rights reserved       <span >|</span>
-        </pre>
+Copyright &copy; 2012 Granny's Pies <span >|</span>
+   A Granny's Pies Production <span >|</span>
+   All rights reserved       <span >|</span>
+</pre>
+<a  href="https://jigsaw.w3.org/css-validator/check/referer">
+    <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="valid css!"></a>
+
+<a  href="https://validator.w3.org/check?uri=referer">
+    <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="valid HTML!!"></a>
 </div>		
   </body>
 </html>
