--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <ul>
             <li> Lesson 1 
                         <ul>
-                            <li> <a href="https://smithtuka.github.io/wap/ass2/aboutme.html"> About Me </a> </li>
-                            <li> <a href="https://smithtuka.github.io/wap/ass2/pie.html"> The Pie </a> </li>
-                            <li> <a href="https://smithtuka.github.io/wap/"> Exercise 3 </a> </li>
+                            <li> <a href="https://smithtuka.github.io/wap/ass2/aboutme.html">About Me</a> </li>
+                            <li> <a href="https://smithtuka.github.io/wap/ass2/pie.html">Pie</a> </li>
+                            <li> <a href="https://smithtuka.github.io/wap/ass3/tmnt.html/">TMNT </a> </li>
                         </ul>
             </li>
     
