--- a/index.html
+++ b/index.html
@@ -1,8 +1,33 @@
 <!DOCTYPE html>
-<html lang="en"> <head>
-    <meta charset="utf-8" />
-    <title>WAP</title> </head>
+<html lang="en"> 
+    <head>
+    
+        <meta charset="utf-8" />
+        <title>Home</title>
+        <style>
+            body{
+                width: 75%;
+                margin: auto;
+                background: rgba(210, 200, 200, 0.6)
+            }
+            header{
+                margin-top: 50px;
+            }
+
+            img{
+                border-radius: 12px;
+            }
+
+            footer{
+                text-align: center;
+                font-family: Verdana, Geneva, Tahoma, "sans-serif";
+            }
+
+        </style>
+
+    </head>
     <body>
+        <header></header>
         <img src ="images/Smith.png" alt = "author - Smith" width = 200 height = 170 />
         <h1> Smith Tukahirwa</h1>
         <ul>
