--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <ul>
                             <li> <a href="https://smithtuka.github.io/wap/ass2/aboutme.html">About Me</a> </li>
                             <li> <a href="https://smithtuka.github.io/wap/ass2/pie.html">Pie</a> </li>
-                            <li> <a href="https://smithtuka.github.io/wap/ass3/tmnt.html/">TMNT </a> </li>
+                            <li> <a href="https://smithtuka.github.io/wap/ass3/tmnt.html">TMNT </a> </li>
                         </ul>
             </li>
     
