--- a/ass3/tmnt.html
+++ b/ass3/tmnt.html
@@ -1,175 +1,254 @@
 <!DOCTYPE html>
-<!-- saved from url=(0074)http://mumstudents.org/cs472/2019-07-RS/Homework/2/resources/skeleton.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>TMNT - Rancid Tomatoes</title>
+<html lang="en">
 
-		
-		<link href="./skeleton_files/movie.css" type="text/css" rel="stylesheet">
-	</head>
+<head>
+	<title>TMNT - Rancid Tomatoes</title>
 
-	<body>
-		<div>
-			<img src="./skeleton_files/banner.png" alt="Rancid Tomatoes">
-		</div>
+	<meta charset="utf-8" />
+	<link href="movie.css" type="text/css" rel="stylesheet" />
+	<link rel='icon' href='rotten.gif'>
+	<link rel="stylesheet" href="movie.css" type="text/css">
+</head>
 
+<body>
+	<div class="movie-title" id="banner">
+		<img src="banner.png" alt="Rancid Tomatoes" />
+	</div>
+	<div class="movie-title">
 		<h1>TMNT (2007)</h1>
-		
-		<div>
-			<img src="./skeleton_files/overview.png" alt="general overview">
+	</div>
+
+
+	<div class="container">
+		<div class='item1'>
+			<img src="overview.png" alt="General overview" />
 		</div>
 
-		<dl>
-			<dt>STARRING</dt>
-			<dd>Patrick Stewart <br> Mako <br> Sarah Michelle Gellar <br> Kevin Smith</dd>
 
-			<dt>DIRECTOR</dt>
-			<dd>Kevin Munroe</dd>
 
-			<dt>RATING</dt>
-			<dd>PG</dd>
+		<div class='item2'>
+			<dl>
+				<dt>STARRING</dt>
+				<dd>Patrick Stewart <br /> Mako <br /> Sarah Michelle Gellar <br /> Kevin Smith</dd>
 
-			<dt>THEATRICAL RELEASE</dt>
-			<dd>Mar 23, 2007</dd>
+				<dt>DIRECTOR</dt>
+				<dd>Kevin Munroe</dd>
 
-			<dt>MOVIE SYNOPSIS</dt>
-			<dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a family.</dd>
+				<dt>RATING</dt>
+				<dd>PG</dd>
 
-			<dt>MPAA RATING</dt>
-			<dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
+				<dt>THEATRICAL RELEASE</dt>
+				<dd>Mar 23, 2007</dd>
 
-			<dt>RELEASE COMPANY</dt>
-			<dd>Warner Bros.</dd>
+				<dt>MOVIE SYNOPSIS</dt>
+				<dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a family.
+				</dd>
 
-			<dt>RUNTIME</dt>
-			<dd>90 mins</dd>
+				<dt>MPAA RATING</dt>
+				<dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
 
-			<dt>GENRE</dt>
-			<dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated Characters</dd>
+				<dt>RELEASE COMPANY</dt>
+				<dd>Warner Bros.</dd>
 
-			<dt>BOX OFFICE</dt>
-			<dd>$54,132,596</dd>
+				<dt>RUNTIME</dt>
+				<dd>90 mins</dd>
 
-			<dt>LINKS</dt>
-			<dd>
-				<ul>
-					<li><a href="http://www.ninjaturtles.com/">The Official TMNT Site</a></li>
-					<li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT Review</a></li>
-					<li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
-					<li><a href="http://mumstudents.org/cs472/">CS472</a></li>
-				</ul>
-			</dd>
-		</dl>
+				<dt>GENRE</dt>
+				<dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated Characters</dd>
 
-		<div>
-			<img src="./skeleton_files/rottenbig.png" alt="Rotten">
-			33%
+				<dt>BOX OFFICE</dt>
+				<dd>$54,132,596</dd>
+
+				<dt>LINKS</dt>
+				<dd>
+					<ul>
+						<li><a href="http://www.ninjaturtles.com/">The Official TMNT Site</a></li>
+						<li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT Review</a></li>
+						<li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
+						<li><a href="http://mumstudents.org/cs472/">CS472</a></li>
+					</ul>
+				</dd>
+			</dl>
 		</div>
-		
-		<p>
-			<img src="./skeleton_files/rotten.gif" alt="Rotten">
-			<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
-		</p>
-		<p>
-			<img src="./skeleton_files/critic.gif" alt="Critic">
-			Peter Debruge <br>
-			Variety
-		</p>
 
-		<p>
-			<img src="./skeleton_files/fresh.gif" alt="Fresh">
-			<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
-		</p>
-		<p>
-			<img src="./skeleton_files/critic.gif" alt="Critic">
-			Todd Gilchrist <br>
-			IGN Movies
-		</p>
 
-		<p>
-			<img src="./skeleton_files/rotten.gif" alt="Rotten">
-			<q>It stinks!</q>
-		</p>
-		<p>
-			<img src="./skeleton_files/critic.gif" alt="Critic">
-			Jay Sherman (unemployed)
-		</p>
 
-		<p>
-			<img src="./skeleton_files/rotten.gif" alt="Rotten">
-			<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
-		</p>
-		<p>
-			<img src="./skeleton_files/critic.gif" alt="Critic">
-			Joshua Tyler <br>
-			CinemaBlend.com
-		</p>
-
-		<p>
-			<img src="./skeleton_files/rotten.gif" alt="Rotten">
-			<q>YOUR REVIEW HERE</q>
-		</p>
-		<p>
-			<img src="./skeleton_files/critic.gif" alt="Critic">
-			NAME <br>
-			PUBLICATION
-		</p>
-
-		<p>
-			<img src="./skeleton_files/rotten.gif" alt="Rotten">
-			<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
-		</p>
-		<p>
-			<img src="./skeleton_files/critic.gif" alt="Critic">
-			Jeannette Catsoulis <br>
-			New York Times
-		</p>
-
-		<p>
-			<img src="./skeleton_files/rotten.gif" alt="Rotten">
-			<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
-		</p>
-		<p>
-			<img src="./skeleton_files/critic.gif" alt="Critic">
-			Ed Gonzalez <br>
-			Slant Magazine
-		</p>
-
-		<p>
-			<img src="./skeleton_files/fresh.gif" alt="Fresh">
-			<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
-		</p>
-		<p>
-			<img src="./skeleton_files/critic.gif" alt="Critic">
-			Mark Palermo <br>
-			Coast (Halifax, Nova Scotia)
-		</p>
-
-		<p>
-			<img src="./skeleton_files/rotten.gif" alt="Rotten">
-			<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
-		</p>
-		<p>
-			<img src="./skeleton_files/critic.gif" alt="Critic">
-			Steve Rhodes <br>
-			Internet Reviews
-		</p>
-
-		<p>
-			<img src="./skeleton_files/rotten.gif" alt="Rotten">
-			<q>YOUR REVIEW HERE</q>
-		</p>
-		<p>
-			<img src="./skeleton_files/critic.gif" alt="Critic">
-			NAME <br>
-			PUBLICATION
-		</p>
-
-		<p>(1-10) of 88</p>
-
-		<div>
-			<a href="http://validator.w3.org/check/referer"><img src="./skeleton_files/w3c-html.png" alt="Valid HTML5"></a> <br>
-			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="./skeleton_files/w3c-css.png" alt="Valid CSS"></a>
+		<div class='item3'>
+			<img src="rottenbig.png" alt="Rotten" />
+			<span>33%</span>
 		</div>
-	
 
-</body></html>
+
+		<div class='item4'>
+			<div id='columns'>
+				<div>
+					<p class="first">
+						<img src="rotten.gif" alt="Rotten" />
+						<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness,
+							the movie attempts to look polished and 'cool,' but the been-there animation can't compete
+							with the
+							then-cutting-edge puppetry of the 1990 live-action movie.</q>
+					</p>
+					<p class="second">
+						<img src="critic.gif" alt="Critic" />
+						Peter Debruge <br />
+						Variety
+					</p>
+				</div>
+
+
+
+				<div>
+					<p class="first">
+						<img src="fresh.gif" alt="Fresh" />
+						<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion
+							of
+							new
+							ones.</q>
+					</p>
+					<p class="second">
+						<img src="critic.gif" alt="Critic" />
+						<span>Todd Gilchrist <br />
+							IGN Movies</span>
+					</p>
+				</div>
+
+
+				<div>
+					<p class="first">
+						<img src="rotten.gif" alt="Rotten" />
+						<q>It stinks!</q>
+					</p>
+					<p class="second">
+						<img src="critic.gif" alt="Critic" />
+						<span>Jay Sherman (unemployed)</span>
+					</p>
+
+				</div>
+
+
+				<div>
+					<p class="first">
+						<img src="rotten.gif" alt="Rotten" />
+						<q>The rubber suits are gone and they've been redone with fancy computer technology, but that
+							hasn't
+							stopped
+							them from becoming dull.</q>
+					</p>
+					<p class="second">
+						<img src="critic.gif" alt="Critic" />
+						<span>Joshua Tyler <br />
+							CinemaBlend.com</span>
+					</p>
+				</div>
+
+
+				<div>
+					<p class="first">
+						<img src="rotten.gif" alt="Rotten" />
+						<q> Its stale!<br/>
+							sooo rotten indeed! it's like having 90 minutes of life to put to waste..
+						</q>
+					</p>
+					<p class="second">
+						<img src="critic.gif" alt="Critic" />
+						<span>Moris Kuntz<br />
+							Chipotle</span>
+					</p>
+				</div>
+
+				<div>
+					<p class="first">
+						<img src="rotten.gif" alt="Rotten" />
+						<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their
+							countercultural
+							roots, our superheroes on the half shell have been firmly co-opted by the industry their
+							creators
+							once
+							sought to spoof.</q>
+					</p>
+					<p class="second">
+						<img src="critic.gif" alt="Critic" />
+						<span>Jeannette Catsoulis <br />
+							New York Times</span>
+					</p>
+				</div>
+
+				<div>
+					<p class="first">
+						<img src="rotten.gif" alt="Rotten" />
+						<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the
+							filmmakers
+							went
+							along.</q>
+					</p>
+					<p class="second">
+						<img src="critic.gif" alt="Critic" />
+						<span>Ed Gonzalez <br />
+							Slant Magazine</span>
+					</p>
+				</div>
+
+				<div>
+					<p class="first">
+						<img src="fresh.gif" alt="Fresh" />
+						<q>The striking use of image and motion allows each sequence to leave an impression. It's an
+							accomplished
+							restart to this franchise.</q>
+					</p>
+					<p class="second">
+						<img src="critic.gif" alt="Critic" />
+						<span>Mark Palermo <br />
+							Coast (Halifax, Nova Scotia)</span>
+					</p>
+				</div>
+
+				<div>
+					<p class="first">
+						<img src="rotten.gif" alt="Rotten" />
+						<q>The script feels like it was computer generated. This mechanical presentation lacks the
+							cheesy
+							charm
+							of the
+							three live action films.</q>
+					</p>
+					<p class="second">
+						<img src="critic.gif" alt="Critic" />
+						<span>Steve Rhodes <br />
+							Internet Reviews</span>
+					</p>
+
+				</div>
+
+				<div>
+					<p class="first">
+						<img src="rotten.gif" alt="Rotten" />
+						<q>Just one word - superversive.</q>
+					</p>
+					<p class="second">
+						<img src="critic.gif" alt="Critic" />
+						<span>James Kawakoski<br />
+							 Blezsedoz</pre></span>
+					</p>
+				</div>
+
+			</div>
+		</div>
+
+		<div class='item5'>
+			<p>(1-10) of 88</p>
+		</div>
+	</div>
+
+	<div class="footer">
+		<a href="https://jigsaw.w3.org/css-validator/check/referer">
+			<img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="valid css!">
+		</a>
+
+		<a href="https://validator.w3.org/check?uri=referer">
+			<img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="valid HTML!!">
+		</a>
+	</div>
+
+</body>
+</html>
