--- a/ass4/shop.html
+++ b/ass4/shop.html
@@ -17,7 +17,7 @@
   <body>
       <header> <h1> Check Out Form </h1> </header>
       <div class= "container">
-          <form action ="" method="POST" >
+          <form method="POST" validate >
               <fieldset class="pdetails">
                   <legend> Personal Details:</legend>
                   <label for="fName"> First Name</label>
