--- a/ass4/shop.html
+++ b/ass4/shop.html
@@ -21,12 +21,12 @@
               <fieldset class="pdetails">
                   <legend> Personal Details:</legend>
                   <label for="fName"> First Name</label>
-                  <input type="text" name="fName" id ="fName" />
+                  <input type="text" name="fName" id ="fName" required/>
                   <label for="lName"> Last Name</label>
                   <input type="text" name="lName" id ="lName" />
                   <label>Phone <input type="tel" name="mobile" /></label>
                   <label for="mail"> Email</label>
-                  <input type="email" name="mail" id ="mail" />
+                  <input type="email" name="mail" id ="mail" required/>
               </fieldset>
 
               <fieldset class ="address">
