--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                         </ul>
             </li>
     
-            <li> <li> <a href="https://smithtuka.github.io/wap/ass3/tmnt.html">Lesson 3</a> </li> </li>
+            <li> <li> <a href="https://smithtuka.github.io/wap/ass3/tmnt.html">Lesson 3</a> 
 
-            <li> <li> <a href="https://smithtuka.github.io/wap/ass4/shop.html">User Form</a> </li> </li>
+            <li> <li> <a href="https://smithtuka.github.io/wap/ass4/shop.html">User Form</a> 
 
         </ul>
 
