--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
                         </ul>
             </li>
     
-            <li> <li> <a href="https://smithtuka.github.io/wap/ass3/tmnt.html">Lesson 3</a> 
+            <li>  <a href="https://smithtuka.github.io/wap/ass3/tmnt.html">Lesson 3 </a> </li>
 
-            <li> <li> <a href="https://smithtuka.github.io/wap/ass4/shop.html">User Form</a> 
+            <li>  <a href="https://smithtuka.github.io/wap/ass4/shop.html">Lesson 4</a> </li>
+            <li> <a href="https://smithtuka.github.io/wap/ass5">Lesson 5</a> </li>
+            <li> <a href="https://smithtuka.github.io/wap/ass6">Lesson 6</a> </li>
+            <li> <a href="https://smithtuka.github.io/wap/ass7">Lesson 7</a> </li>
 
         </ul>
 
