--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
             <li>  <a href="https://smithtuka.github.io/wap/ass4/shop.html">Lesson 4</a> </li>
             <li> <a href="https://smithtuka.github.io/wap/ass5">Lesson 5</a> </li>
-            <li> <a href="https://smithtuka.github.io/wap/ass6">Lesson 6</a> </li>
-            <li> <a href="https://smithtuka.github.io/wap/ass7">Lesson 7</a> </li>
+            <li> <a href="https://smithtuka.github.io/wap/ass6/ascii.html">Lesson 6</a> </li>
+            <li> <a href="https://smithtuka.github.io/wap/ass7/index.html">Lesson 7</a> </li>
 
         </ul>
 
