ft-add7, ch-clean6

--- a/ass6/index.html
+++ b/ass6/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>ASCIImation</title>
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <img src="heart.png" alt="love" />
 <header>CS472: ASCII Animation Viewer</header>
 <div>
     <textarea id="text-area" cols="80" rows="20"></textarea>
@@ -22,6 +23,14 @@
 
     <fieldset>
         <legend>Animation:</legend>
+        <!-- <input list="animationList" id ="animation" />
+        <datalist id="animationList">
+            <option selected="selected" value="Blank">Blank</option>
+            <option value="Exercise">Exercise</option>
+            <option value="Juggler">Juggler</option>
+            <option value="Bike">Bike</option>
+            <option value="Dive">Dive</option>
+        </datalist> -->
         <select id="animation">
             <option selected="selected" value="Blank">Blank</option>
             <option value="Exercise">Exercise</option>
