--- a/ass7/index.html
+++ b/ass7/index.html
@@ -1,19 +1,55 @@
+
 <!DOCTYPE html>
-<html lang ="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Lesson 7</title>
+<html lang="en-US">
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>Accounts</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="account.css" type="text/css" rel="stylesheet">
+    <script src="account.js" type ="text/javaScript" ></script>
+</head>
 
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+<body>
+    <header>
+        <h1>Account Handling System</h1>
+    </header>
+    <div class ="container">
+        <div class ="container2">
+
+            
+            <label for ="accountType">Select your account type: </label>
+            <select id="accountType" name="accountType">
+                
+                <option> Savings</option>
+                <option> Checking</option>
+                <option> Current</option>
+                <option selected> Fixed Deposit</option>
+
+            </select>
+        </div>
+
+        <div id="validate">
+            <a href="https://validator.w3.org/check/referer">
+                <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+                     alt="html validator"/>
+            </a><br /> 
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                     src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+                     alt="Valid CSS!" />
+            </a>
+        </div>
+
+    </div>
 
 
-    <link rel="stylesheet" type="text/css" href="theme.css" />
+
+   
 
 
 
-  </head>
-  
-  <body>
-		<p> <a href ="/"> Come in..</a></p>	
-  </body>
+
+
+
+</body>
 </html>
