ch-rm type/js in HTML5

--- a/ass7/index.html
+++ b/ass7/index.html
@@ -6,7 +6,7 @@
     <title>Accounts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="account.css" type="text/css" rel="stylesheet">
-    <script src="account.js" type ="text/javaScript" ></script>
+    <script src="account.js" ></script>
 </head>
 
 <body>
