--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <li> <a href="https://smithtuka.github.io/wap/ass5">Lesson 5</a> </li>
             <li> <a href="https://smithtuka.github.io/wap/ass6/ascii.html">Lesson 6</a> </li>
             <li> <a href="https://smithtuka.github.io/wap/ass7/index.html">Lesson 7</a> </li>
+            <li> <a href="https://smithtuka.github.io/wap/ass8/index.html">Lesson 8</a> </li>
 
         </ul>
 
