--- a/snippet.html
+++ b/snippet.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html lang ="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Untitled</title>
- 
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+<html lang="en">
 
-    <meta name="HandheldFriendly" content="true" />
+<head>
+  <meta charset="utf-8">
+  <title>Untitled</title>
 
-    <link rel="stylesheet" type="text/css" href="theme.css" />
-    <script src="" type="text/javascript"></script>
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
+  <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
 
-  </head>
-  
-  <body>
+  <meta name="HandheldFriendly" content="true" />
 
-    <p> <a href ="/"> Come in..</a></p>	
-    
-  </body>
+  <link rel="stylesheet" type="text/css" href="theme.css" />
+  <script src="" type="text/javascript"></script>
+
+</head>
+
+<body>
+
+  <p> <a href="/"> Come in..</a></p>
+
+</body>
 
 </html>
